--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <div class="row text-center text-md-right">
                         <div class="col-6 d-flex align-items-center mb-3">
                             <img src="images/phone_icon_inverted.png" alt="telefon" class="img-fluid social-icon-img">
-                            <p class="header-social mb-0 ml-2">+420 608 651 792</p>
+                            <p class="mb-0 ml-2"><span class="phone-number">+420 608 651 792</span></p>
                         </div>
                         <div class="col-6 d-flex align-items-center mb-3">
                             <img src="images/mail_icon_inverted.png" alt="email" class="img-fluid social-icon-img">
@@ -259,7 +259,7 @@
                 <img src="images/logo_black.png" alt="Logo" class="logo" style="max-width: 150px;">
             </a>
             <div class="text-center" style="white-space: nowrap;">
-                <a href="#" class="text-white mr-3" data-toggle="modal" data-target="#termsModal">Soukromí a cookies</a>
+                <a href="#" class="text-white mr-3" data-toggle="modal" data-target="#termsModal">Soukromí</a>
                 <a href="https://github.com/slechtd" class="text-white mr-3">© 2024 Daniel Šlechta</a>
             </div>
         </div>
@@ -268,8 +268,8 @@
     <!-- Cookie Consent Banner -->
     <div id="cookieConsent" class="cookie-consent" style="display: none;">
         <div class="container d-flex justify-content-between align-items-center">
-            <p class="mb-0">Tento web používá cookies pro zajištění lepšího zážitku. <a href="#" data-toggle="modal" data-target="#termsModal">Zjistit více</a></p>
-            <button id="closeCookieConsent" class="custom-btn custom-btn-primary">Zavřít</button>
+            <p class="mb-0">Cookies: Používáme nezbytné technické cookies pro zajištění chodu webu. <a href="#" data-toggle="modal" data-target="#termsModal">Zjistit více</a></p>
+            <button id="closeCookieConsent" class="custom-btn custom-btn-primary">V pořádku</button>
         </div>
     </div>
 
