--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <div class="row text-center text-md-right">
                         <div class="col-6 d-flex align-items-center mb-3">
                             <img src="images/phone_icon_inverted.png" alt="telefon" class="img-fluid social-icon-img">
-                            <p class="mb-0 ml-2"><span class="phone-number">+420 608 651 792</span></p>
+                            <p class="header-social mb-0 ml-2">+420 608 651 792</p>
                         </div>
                         <div class="col-6 d-flex align-items-center mb-3">
                             <img src="images/mail_icon_inverted.png" alt="email" class="img-fluid social-icon-img">
@@ -44,7 +44,9 @@
                         <div class="col-6 d-flex align-items-center mb-3">
                             <a href="https://instagram.com/nastdecor" class="d-flex align-items-center">
                                 <img src="images/inst_icon_inverted.png" alt="instagram" class="img-fluid social-icon-img">
-                                <p class="header-social mb-0 ml-2">instagram.com/nastdecor</p>
+                                <p class="header-social mb-0 ml-2">
+                                    <span class="phone-number">+420 608 651 792</span>
+                                </p>                                
                             </a>
                         </div>
                     </div>
