fix iphone issue, increase margin for footer logo

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
                     <div class="row text-center text-md-right">
                         <div class="col-6 d-flex align-items-center mb-3">
                             <img src="images/phone_icon_inverted.png" alt="telefon" class="img-fluid social-icon-img">
-                            <p class="header-social mb-0 ml-2">+420 608 651 792</p>
+                            <p class="header-social mb-0 ml-2">
+                                <span class="phone-number">+420 608 651 792</span>
+                            </p>
                         </div>
                         <div class="col-6 d-flex align-items-center mb-3">
                             <img src="images/mail_icon_inverted.png" alt="email" class="img-fluid social-icon-img">
@@ -44,9 +46,7 @@
                         <div class="col-6 d-flex align-items-center mb-3">
                             <a href="https://instagram.com/nastdecor" class="d-flex align-items-center">
                                 <img src="images/inst_icon_inverted.png" alt="instagram" class="img-fluid social-icon-img">
-                                <p class="header-social mb-0 ml-2">
-                                    <span class="phone-number">+420 608 651 792</span>
-                                </p>                                
+                                <p class="header-social mb-0 ml-2">instagram.com/nastdecor</p>
                             </a>
                         </div>
                     </div>
@@ -258,7 +258,7 @@
     <footer class="py-3 text-white text-center" style="background-color: #1a1919;">
         <div class="container d-flex justify-content-between align-items-center">
             <a href="#header" class="same-tab">
-                <img src="images/logo_black.png" alt="Logo" class="logo" style="max-width: 150px;">
+                <img src="images/logo_black.png" alt="Logo" class="logo" style="max-width: 150px; margin-right: 4px;">
             </a>
             <div class="text-center" style="white-space: nowrap;">
                 <a href="#" class="text-white mr-3" data-toggle="modal" data-target="#termsModal">Soukromí</a>
