attempt so solve iphone phone number visibility issue

--- a/index.html
+++ b/index.html
@@ -29,9 +29,7 @@
                     <div class="row text-center text-md-right">
                         <div class="col-6 d-flex align-items-center mb-3">
                             <img src="images/phone_icon_inverted.png" alt="telefon" class="img-fluid social-icon-img">
-                            <p class="header-social mb-0 ml-2">
-                                <span class="phone-number">+420 608 651 792</span>
-                            </p>
+                            <a href="tel:+420608651792" class="header-social">+420 608 651 792</a>                 
                         </div>
                         <div class="col-6 d-flex align-items-center mb-3">
                             <img src="images/mail_icon_inverted.png" alt="email" class="img-fluid social-icon-img">
@@ -262,7 +260,7 @@
             </a>
             <div class="text-center" style="white-space: nowrap;">
                 <a href="#" class="text-white mr-3" data-toggle="modal" data-target="#termsModal">Soukromí</a>
-                <a href="https://github.com/slechtd" class="text-white mr-3">© 2024 Daniel Šlechta</a>
+                <a href="https://github.com/slechtd" class="text-white mr-3">© Daniel Šlechta</a>
             </div>
         </div>
     </footer>
