--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <div class="row text-center text-md-right">
                         <div class="col-6 d-flex align-items-center mb-3">
                             <img src="images/phone_icon_inverted.png" alt="telefon" class="img-fluid social-icon-img">
-                            <a href="tel:+420608651792" class="header-social">+420 608 651 792</a>                 
+                            <a href="tel:+420608651792" class="header-social mb-0 ml-2">+420 608 651 792</a>                 
                         </div>
                         <div class="col-6 d-flex align-items-center mb-3">
                             <img src="images/mail_icon_inverted.png" alt="email" class="img-fluid social-icon-img">
@@ -207,7 +207,7 @@
             <div class="row text-center text-md-left">
                 <div class="col-md-3 col-12 mb-3 d-flex align-items-center">
                     <img src="images/phone_icon.png" alt="telefon" class="img-fluid social-icon-img">
-                    <p class="mb-0 ml-2">+420 608 651 792</p>
+                    <a href="tel:+420608651792" class="mb-0 ml-2">+420 608 651 792</a> 
                 </div>
                 <div class="col-md-3 col-12 mb-3 d-flex align-items-center">
                     <img src="images/mail_icon.png" alt="email" class="img-fluid social-icon-img">
@@ -260,7 +260,7 @@
             </a>
             <div class="text-center" style="white-space: nowrap;">
                 <a href="#" class="text-white mr-3" data-toggle="modal" data-target="#termsModal">Soukromí</a>
-                <a href="https://github.com/slechtd" class="text-white mr-3">© Daniel Šlechta</a>
+                <a href="https://github.com/slechtd" class="text-white mr-3">© DŠ</a>
             </div>
         </div>
     </footer>
