--- a/index.html
+++ b/index.html
@@ -21,35 +21,35 @@
 
     <header class="bg-header py-3" id="header">
         <div class="container">
-            <div class="row align-items-center">
-                <div class="col-md-6 text-center text-md-left">
+                <div class="col-md-6 text-left text-md-left">
                     <img src="images/logo_black.png" alt="nastdecor" class="img-fluid logo">
                 </div>
-                <div class="col-md-6">
-                    <div class="row text-center text-md-right">
-                        <div class="col-6 d-flex align-items-center mb-3">
+
+                <div class="container">
+                    <div class="row text-center text-md-left">
+                        <div class="col-md-3 col-12 mb-3 d-flex align-items-center">
                             <img src="images/phone_icon_inverted.png" alt="telefon" class="img-fluid social-icon-img">
-                            <a href="tel:+420608651792" class="header-social mb-0 ml-2">+420 608 651 792</a>                 
+                            <a href="tel:+420608651792" class="mb-0 ml-2 header-social">+420 608 651 792</a> 
                         </div>
-                        <div class="col-6 d-flex align-items-center mb-3">
+                        <div class="col-md-3 col-12 mb-3 d-flex align-items-center">
                             <img src="images/mail_icon_inverted.png" alt="email" class="img-fluid social-icon-img">
-                            <a href="mailto:patrik.nastoupil@seznam.cz" class="header-social mb-0 ml-2">FrescoCZ@gmail.com</a>
+                            <a href="mailto:patrik.nastoupil@seznam.cz" class="mb-0 ml-2 header-social">FrescoCZ@gmail.com</a>
                         </div>
-                        <div class="col-6 d-flex align-items-center mb-3">
+                        <div class="col-md-3 col-12 mb-3 d-flex align-items-center">
                             <a href="https://facebook.com/nastdecor" class="d-flex align-items-center">
                                 <img src="images/fb_icon_inverted.png" alt="facebook" class="img-fluid social-icon-img">
-                                <p class="header-social mb-0 ml-2">facebook.com/nastdecor</p>
+                                <p class="mb-0 ml-2 header-social">Facebook</p>
                             </a>
                         </div>
-                        <div class="col-6 d-flex align-items-center mb-3">
+                        <div class="col-md-3 col-12 mb-3 d-flex align-items-center">
                             <a href="https://instagram.com/nastdecor" class="d-flex align-items-center">
                                 <img src="images/inst_icon_inverted.png" alt="instagram" class="img-fluid social-icon-img">
-                                <p class="header-social mb-0 ml-2">instagram.com/nastdecor</p>
+                                <p class="mb-0 ml-2 header-social">Instagram</p>
                             </a>
                         </div>
                     </div>
                 </div>
-            </div>
+  
         </div>
     </header>
     
@@ -216,13 +216,13 @@
                 <div class="col-md-3 col-12 mb-3 d-flex align-items-center">
                     <a href="https://facebook.com/nastdecor" class="d-flex align-items-center">
                         <img src="images/fb_icon.png" alt="facebook" class="img-fluid social-icon-img">
-                        <p class="mb-0 ml-2">facebook.com/nastdecor</p>
+                        <p class="mb-0 ml-2">Facebook</p>
                     </a>
                 </div>
                 <div class="col-md-3 col-12 mb-3 d-flex align-items-center">
                     <a href="https://instagram.com/nastdecor" class="d-flex align-items-center">
                         <img src="images/inst_icon.png" alt="instagram" class="img-fluid social-icon-img">
-                        <p class="mb-0 ml-2">instagram.com/nastdecor</p>
+                        <p class="mb-0 ml-2">Instagram</p>
                     </a>
                 </div>
             </div>
