add some meta, WIP page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="author" content="Daniel Šlechta - github.com/slechtd">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="NASTDECOR | Stěrky Patrik Nastoupil: Kvalitní, praktické a stylové řešení.">
+    <meta name="keywords" content="stěrka, stěrky, plasters, štuk, benátské štuky, dekorativní omítky, omítka, Patrik Nastoupil, Lysá nad Labem, řemeslník">
     <title>NΔSTDECOR - Patrik Nastoupil</title>
     <link rel="icon" href="images/favicon.png" type="image/png">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
@@ -158,10 +161,8 @@
         </div>
     </section>
 
-    <!-- VALIDACI NA VYPLNĚNÉ ÚDAJE A JEJICH SPRÁVNOST. ODSTRANIT FORMSPREE A MÍSTO TOHO CUSTOM ??? -->
-    <!-- Checkbox, že souhlasím se zpracováním údajů -->
-    <!-- Kontrolovat response z Azure? COnfirmation/error pop-up -->
-     
+    <!-- VALIDACE A VALIDAČNÍ HLÁŠKY ČESKY ??? -->
+
     <!-- Contact -->
     <section class="py-5" id="contact">
         <div class="container">
