--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="author" content="Daniel Šlechta - github.com/slechtd">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="NASTDECOR | Stěrky Patrik Nastoupil: Kvalitní, praktické a stylové řešení.">
-    <meta name="keywords" content="stěrka, stěrky, plasters, štuk, benátské štuky, dekorativní omítky, omítka, Patrik Nastoupil, Lysá nad Labem, řemeslník">
+    <meta name="keywords" content="stěrka, stěrky, štuk, benátské štuky, dekorativní omítky, omítka, Patrik Nastoupil, Lysá nad Labem, řemeslník">
     <title>NΔSTDECOR - Patrik Nastoupil</title>
     <link rel="icon" href="images/favicon.png" type="image/png">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
@@ -24,7 +24,7 @@
     <header class="bg-header py-3" id="header">
         <div class="container">
             <div class="col-md-6 text-left text-md-left">
-                <img src="images/logo_black.png" alt="nastdecor" class="img-fluid logo">
+                <img src="images/logo_black.png" alt="Nastdecor Logo" class="img-fluid logo">
             </div>
             <div class="container">
                 <div class="row">
@@ -78,7 +78,7 @@
                     </p>
                 </div>
                 <div class="py-3 col-md-6 order-2 order-md-2 custom-align">
-                    <img src="images/profile_photo.png" alt="Profile Photo" class="profile-photo">
+                    <img src="images/profile_photo.png" alt="Patrik Nastoupil" class="profile-photo">
                 </div>
             </div>
         </div>
@@ -94,29 +94,29 @@
         <div class="container">
             <h2 class="text-left mb-4">Ukázka mé práce</h2>
             <a href="https://instagram.com/nastdecor" class="d-flex align-items-center mb-4">
-                <img src="images/inst_icon.png" alt="mapa" class="social-icon-img mr-2">
+                <img src="images/inst_icon.png" alt="Zobrazit více na Instagramu" class="social-icon-img mr-2">
                 <p class="mb-0">Zobrazit více na Instagramu</p>
             </a>
             <div class="row">
                 <div class="col-md-4">
-                    <img src="images/work1.png" alt="Project 1" class="img-fluid pb-4 clickable-image" data-toggle="modal" data-target="#imageModal" data-img-src="images/work1.png">
+                    <img src="images/work1.png" alt="Projekt 1" class="img-fluid pb-4 clickable-image" data-toggle="modal" data-target="#imageModal" data-img-src="images/work1.png">
                 </div>
                 <div class="col-md-4">
-                    <img src="images/work1.png" alt="Project 2" class="img-fluid pb-4 clickable-image" data-toggle="modal" data-target="#imageModal" data-img-src="images/work1.png">
+                    <img src="images/work2.png" alt="Projekt 2" class="img-fluid pb-4 clickable-image" data-toggle="modal" data-target="#imageModal" data-img-src="images/work2.png">
                 </div>
                 <div class="col-md-4">
-                    <img src="images/work1.png" alt="Project 3" class="img-fluid pb-4 clickable-image" data-toggle="modal" data-target="#imageModal" data-img-src="images/work1.png">
+                    <img src="images/work3.png" alt="Projekt 3" class="img-fluid pb-4 clickable-image" data-toggle="modal" data-target="#imageModal" data-img-src="images/work3.png">
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-4">
-                    <img src="images/work1.png" alt="Project 4" class="img-fluid pb-4 clickable-image" data-toggle="modal" data-target="#imageModal" data-img-src="images/work1.png">
+                    <img src="images/work4.png" alt="Projekt 4" class="img-fluid pb-4 clickable-image" data-toggle="modal" data-target="#imageModal" data-img-src="images/work4.png">
                 </div>
                 <div class="col-md-4">
-                    <img src="images/work1.png" alt="Project 5" class="img-fluid pb-4 clickable-image" data-toggle="modal" data-target="#imageModal" data-img-src="images/work1.png">
+                    <img src="images/work5.png" alt="Projekt 5" class="img-fluid pb-4 clickable-image" data-toggle="modal" data-target="#imageModal" data-img-src="images/work5.png">
                 </div>
                 <div class="col-md-4">
-                    <img src="images/work1.png" alt="Project 6" class="img-fluid pb-4 clickable-image" data-toggle="modal" data-target="#imageModal" data-img-src="images/work1.png">
+                    <img src="images/work6.png" alt="Projekt 6" class="img-fluid pb-4 clickable-image" data-toggle="modal" data-target="#imageModal" data-img-src="images/work6.png">
                 </div>
             </div>
         </div>
@@ -127,7 +127,7 @@
         <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-body">
-                    <img id="modalImage" src="" alt="Full Size" class="img-fluid">
+                    <img id="modalImage" src="" alt="Ukázka mojí práce" class="img-fluid">
                 </div>
                 <div class="modal-footer">
                     <div class="text-center w-100">
@@ -144,7 +144,7 @@
             <h2 class="text-left mb-4">Navštivte showroom v Lysé nad Labem</h2>
             <div class="d-flex align-items-center mb-4">
                 <a href="https://maps.app.goo.gl/EMrsCw632iBFigza6" class="d-flex align-items-center">
-                    <img src="images/map_icon.png" alt="mapa" class="social-icon-img mr-2">
+                    <img src="images/map_icon.png" alt="Ukázat na mapě" class="social-icon-img mr-2">
                     <p class="mb-0">Zobrazit na mapě</p>
                 </a>
             </div>
@@ -154,7 +154,7 @@
             <div class="row">
                 <div class="col-12 text-center">
                     <div class="full-width-img">
-                        <img src="images/showroom.png" alt="Full Size Image" class="img-fluid" style="width: 100%; height: auto;">
+                        <img src="images/showroom.png" alt="Showroom" class="img-fluid" style="width: 100%; height: auto;">
                     </div>
                 </div>
             </div>
@@ -168,7 +168,7 @@
             <form id="contactForm" action="send_email.php" method="POST">
                 <div class="row">
                     <div class="col-md-6 mb-3">
-                        <input type="text" class="form-control" name="name" placeholder="Jméno a příjmení" required>
+                        <input type="text" class="form-control" name="name" placeholder="Vaše jméno a příjmení" required>
                     </div>
                     <div class="col-md-6 mb-3">
                         <input type="email" class="form-control" name="email" placeholder="Email" required>
@@ -176,12 +176,12 @@
                 </div>
                 <div class="row">
                     <div class="col-md-6 mb-3">
-                        <input type="tel" class="form-control" name="phone" placeholder="Telefon">
+                        <input type="phone" class="form-control" name="phone" placeholder="Telefon">
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-12 mb-3">
-                        <textarea class="form-control" name="message" rows="5" placeholder="Vaše zpráva" required></textarea>
+                        <textarea class="form-control" name="message" rows="5" placeholder="Vaše zpráva - můžete popsat třeba Vaší představu, metráž, místo realizace... :) " required></textarea>
                     </div>
                 </div>
                 <!-- Checkbox and Submit Button Row -->
@@ -189,7 +189,7 @@
                     <div class="col-md-8 d-flex align-items-center mb-4">
                         <input type="checkbox" name="terms" id="terms" required class="mr-2">
                         <label for="terms" class="mb-0 ml-2">
-                            Souhlasím s <a href="#" class="u-link" data-toggle="modal" data-target="#termsModal">podmínkami používání a zpracováním osobních údajů</a>.
+                            Souhlasím s <a href="#" class="u-link" data-toggle="modal" data-target="#termsModal">pravidly používání a zpracováním osobních údajů</a>.
                         </label>
                     </div>
                     <div class="col-md-4 text-right mb-4">
@@ -207,7 +207,7 @@
             <!-- Item 1: Phone -->
             <div class="col-lg-3 col-md-6 col-sm-12 mb-3 mb-lg-0">
             <a href="tel:+420608651792" class="d-flex align-items-center no-wrap">
-                <img src="images/phone_icon.png" alt="Phone Icon" class="me-2 social-icon-img">
+                <img src="images/phone_icon.png" alt="Telefon" class="me-2 social-icon-img">
                 +420 608 651 792
             </a>
             </div>
@@ -215,7 +215,7 @@
             <!-- Item 2: Email -->
             <div class="col-lg-3 col-md-6 col-sm-12 mb-3 mb-lg-0">
             <a href="mailto:info@nastdecor.cz" class="d-flex align-items-center no-wrap">
-                <img src="images/mail_icon.png" alt="Mail Icon" class="me-2 social-icon-img">
+                <img src="images/mail_icon.png" alt="Email" class="me-2 social-icon-img">
                 info@nastdecor.cz
             </a>
             </div>
@@ -223,7 +223,7 @@
             <!-- Item 3: Facebook -->
             <div class="col-lg-3 col-md-6 col-sm-12 mb-3 mb-lg-0">
             <a href="https://facebook.com/nastdecor" class="d-flex align-items-center no-wrap" target="_blank" rel="noopener noreferrer">
-                <img src="images/fb_icon.png" alt="Facebook Icon" class="me-2 social-icon-img">
+                <img src="images/fb_icon.png" alt="Facebook" class="me-2 social-icon-img">
                 facebook.com/nastdecor
             </a>
             </div>
@@ -231,7 +231,7 @@
             <!-- Item 4: Instagram -->
             <div class="col-lg-3 col-md-6 col-sm-12">
             <a href="https://instagram.com/nastdecor" class="d-flex align-items-center no-wrap" target="_blank" rel="noopener noreferrer">
-                <img src="images/inst_icon.png" alt="Instagram Icon" class="me-2 social-icon-img">
+                <img src="images/inst_icon.png" alt="Instagram" class="me-2 social-icon-img">
                 instagram.com/nastdecor
             </a>
             </div>
@@ -244,7 +244,7 @@
         <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h2 class="modal-title" id="termsModalLabel">Podmínky používání webu, pravidla zpracování a ochrany osobních údajů, cookies:</h5>
+                    <h2 class="modal-title" id="termsModalLabel">Podmínky používání webu, pravidla zpracování osobních údajů, cookies:</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
@@ -253,7 +253,7 @@
 
                     <br>Všeobecné podmínky pro používání webových stránek nastdecor.cz:</br>
 
-                    <br>Uživatel se používáním strákem potvrzuje svůj souhlas s těmito podmínkami, s pravidly spracováním osobních údajů a využitím technických cookies. Uživatel se dále zavazuje používat tyto webové stránky pouze v souladu se zákonem. Uživatel se zavazuje nést plnou zodpovědnost za úžívání těchto webových stránek. Provozovatel neručí za škody, které by užíváním těchto webových stráken vznikly a to přímo i nepřímo. Webová stránka poskytuje kontaktní formulář (dále též poptávkový formulář). Uživatel se využitém této funkce zavazuje ji využívat pouze k jejímu účelu (vyjádření poptávky po nabízené službě, navázání obchodní komunikace). Využitím poptávkového formuláře uživatel souhlasí se zpracováním uvedených osobních údajů k účelu a v rozsahu popsaném níže. Uživatel využitím poptávkového formuláře prohlašuje, že uvedené údaje jsou jeho vlastní, má právo je předávat. Vystupování pod cizí nebo falešnou identitou je zakázáno. Využitím poptávkového formuláře dává uživatel výslovný souhlas být kontaktován ve věci poptávaných služeb a to prostřednictvím uvedeného telefonu a emailu. Uživatel má právo kdykoli obchodní kontakt odmítnout nebo přerušit. V takovém případě budou poskytnuté údaje smazány způsobem a ve lhůtách viz níže. Poptávka, kterou uživatel vyjadřuje využitém kontaktního formuláře má pouze orientační charakter a je nezávazná pro všechny strany. Provozovatel si vyhrazuje právo na zaslané poptávky nereagovat. V takovém případě budou osobní údaje poskytnuté uživatelem smazány způsobem a ve lhůtách popsaných níže. Služby nabízené na těchto webových stránkách (prostřednictvím textu, fotografií, audiovizuální materiálů, pozvánka do showroomu, atd.) mají informační charakter a jejich uvedením nevznikají žádné straně žádná práva ani povinnosti - konkrétní povaha a rozsah dodaných služeb bude upraveny v rámci navázaného obchodního styku, respektive smlouvy. Veškeré texty, fotografie a audiovizuální materiály na těchto webových stránkách jsou duševním vlastnictvím jejich autora, provozovatele stránek.</br>
+                    <br>Uživatel používáním stráken vyjadřuje svůj souhlas s těmito podmínkami, s pravidly spracováním osobních údajů a využitím technických cookies. Uživatel se dále zavazuje používat tyto webové stránky pouze v souladu se zákonem. Uživatel se zavazuje nést plnou zodpovědnost za úžívání těchto webových stránek. Provozovatel neručí za škody, které by užíváním těchto webových stráken vznikly a to přímo i nepřímo. Webová stránka poskytuje kontaktní formulář (dále též poptávkový formulář). Uživatel se využitém této funkce zavazuje ji využívat pouze k jejímu účelu (vyjádření poptávky po nabízené službě, navázání obchodní komunikace). Využitím poptávkového formuláře uživatel souhlasí se zpracováním uvedených osobních údajů k účelu a v rozsahu popsaném níže. Uživatel využitím poptávkového formuláře prohlašuje, že uvedené údaje jsou jeho vlastní, má právo je předávat. Vystupování pod cizí nebo falešnou identitou je zakázáno. Využitím poptávkového formuláře dává uživatel výslovný souhlas být kontaktován ve věci poptávaných služeb a to prostřednictvím uvedeného telefonu a emailu. Uživatel má právo kdykoli obchodní kontakt odmítnout nebo přerušit. V takovém případě budou poskytnuté údaje smazány způsobem a ve lhůtách viz níže. Poptávka, kterou uživatel vyjadřuje využitém kontaktního formuláře má pouze orientační charakter a je nezávazná pro všechny strany. Provozovatel si vyhrazuje právo na zaslané poptávky nereagovat. V takovém případě budou osobní údaje poskytnuté uživatelem smazány způsobem a ve lhůtách popsaných níže. Služby nabízené na těchto webových stránkách (prostřednictvím textu, fotografií, audiovizuální materiálů, pozvánka do showroomu, atd.) mají informační charakter a jejich uvedením nevznikají žádné straně žádná práva ani povinnosti - konkrétní povaha a rozsah dodaných služeb bude upraveny v rámci navázaného obchodního styku, respektive smlouvy. Veškeré texty, fotografie a audiovizuální materiály na těchto webových stránkách jsou duševním vlastnictvím jejich autora, provozovatele stránek.</br>
 
                     <br>Správce osobních údajů:</br>
 
@@ -304,7 +304,7 @@
     <footer class="py-3 text-white text-center" style="background-color: #1a1919;">
         <div class="container d-flex justify-content-between align-items-center">
             <a href="#header" class="same-tab">
-                <img src="images/logo_black.png" alt="Logo" class="logo" style="max-width: 150px; margin-right: 4px;">
+                <img src="images/logo_black.png" alt="Nastdecor Logo" class="logo" style="max-width: 150px; margin-right: 4px;">
             </a>
             <div class="text-center" style="white-space: nowrap;">
                 <a href="#" class="text-white mr-3" data-toggle="modal" data-target="#termsModal">Pravidla</a>
